--- a/_config.yml
+++ b/_config.yml
@@ -86,4 +86,4 @@ sass:
   sass_dir: css
 timezone: Asia/Tokyo
 title: あらB.fm
-url: http://arkbfm.github.io/arkbfm/
+url: https://arkb.github.io/arkb/
